kustomize/prod/patch-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pypodinfo
spec:
  template:
    spec:
      containers:
        - name: pypodinfo
          image: scum:bag # {"$imagepolicy": "flux-system:pypodinfo-prod"}
