kustomize/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pypodinfo-prod
  labels:
    app: pypodinfo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "end2end.weave.works"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pypodinfo-prod
                port:
                  number: 8080
